<resources>
    <string name="app_name">PruebaCertificacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviar_e_mail">Enviar E-mail</string>
    <string name="id">Id</string>
    <string name="author">Author</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="link">Link</string>
    <string name="pages">Pages</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="lastprice">LastPrice</string>
    <string name="delivery">Delivery</string>
    <string name="mensajeMail">Hola, Vi el libro de código y me gustaría que me contactaran a este correo o al siguiente número Quedo atento.</string>

</resources>