<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:background="@color/colorLightPrimaryColor">

        <TextView
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="10dp"
            android:text="@string/id"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txtTitle"
            app:layout_constraintStart_toEndOf="@+id/imagen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/author"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txtCountry"
            app:layout_constraintStart_toEndOf="@+id/imagen" />

        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="12dp"
            android:text="@string/country"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txtLanguage"
            app:layout_constraintStart_toEndOf="@+id/imagen" />

        <TextView
            android:id="@+id/txtLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="92dp"
            android:text="@string/language"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagen" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="12dp"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txtAuthor"
            app:layout_constraintStart_toEndOf="@+id/imagen" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="100dp"
            android:layout_height="103dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>